--- a/client/src/StudentsPage/StudentPage.css
+++ b/client/src/StudentsPage/StudentPage.css
@@ -28,8 +28,21 @@
 }
 
 #StudentPage header > div:first-of-type {
-    padding: 15px 40px;
-    text-align: end;
+    height: 15%;
+    padding: 0px 40px;
+    background-color: white;
+    display: flex;
+    justify-content: end;
+}
+
+#StudentPage header > div:first-of-type > div {
+    width: 11%;
+    height: 100%;
+}
+
+#StudentPage header > div:first-of-type > div img {
+    width: 100%;
+    height: 100%;
 }
 
 #StudentPage header > div:last-of-type {
@@ -76,7 +89,7 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    background-color: #6868ff;
+    background-color: white;
     border-radius: 3px;
 
 }
