--- a/client/src/AdminPage/Responsive.css
+++ b/client/src/AdminPage/Responsive.css
@@ -1,4 +1,34 @@
-@media (min-width: 300px) and (max-width: 370px) {
+@media (min-width: 100px) and (max-width: 450px) {
+    #AdminPageHeader {
+        height: 8%;
+        padding: 0 5px;
+    }
+
+    #AdminPageSection {
+        height: 92%;
+    }
+
+    #AdminPageHeader > div:first-of-type {
+        width: 45%;
+    }
+
+    #AdminPageHeader > div:last-of-type {
+        width: 33%;
+        padding: 3px 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #AdminPageHeader > div:last-of-type > div:first-of-type {
+        font-size: .7rem;
+        align-self: center;
+    }
+
+    #AdminPageHeader > div:last-of-type > div:last-of-type a {
+        font-size: 1.1rem;
+    }
+
     #RegisterRequestsContent {
         height: 75%;
     }
@@ -6,10 +36,141 @@
     #RegisterRequestsFooter {
         flex-wrap: wrap;
         height: 16%;
+        align-content: center;
     }
 
     #RegisterRequestsFooter button {
         width: calc(70% / 2);
         font-size: .7rem;
+        margin: 5px 15px;
+    }
+
+    
+    #RegisterRequestsContent table {
+        font-size: .8rem;
+    }
+
+    #AdminPageSection > div:first-of-type form > * {
+        margin: 0 5px;
+    }
+
+    #AdminPageSection > div:first-of-type form > input {
+        width: 75%;
+        font-size: .7rem;
+    }
+
+    #AdminPageSection > div:first-of-type form > select {
+        width: 25%;
+        font-size: .6rem;
+    }
+
+    .notdata {
+        font-size: 1.2rem;
+    }
+}
+
+
+@media (min-width: 450px) and (max-width: 550px) {
+    #AdminPageHeader {
+        padding: 0 15px;
+    }
+
+    #AdminPageHeader > div:first-of-type {
+        width: 140px;
+    }
+
+    #AdminPageHeader > div:last-of-type {
+        width: 33%;
+        padding: 3px 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #AdminPageHeader > div:last-of-type > div:first-of-type {
+        font-size: .9rem;
+        align-self: center;
+    }
+
+    #AdminPageHeader > div:last-of-type > div:last-of-type a {
+        font-size: 1.1rem;
+    }
+
+    #AdminPageSection > div:first-of-type form > input {
+        width: 75%;
+        font-size: .9rem;
+    }
+
+    #AdminPageSection > div:first-of-type form > select {
+        width: 25%;
+        font-size: .8rem;
+    }
+
+    #RegisterRequestsFooter button {
+        font-size: .7rem;
+    }
+}
+
+@media (min-width: 550px) and (max-width: 610px) {
+    #AdminPageHeader > div:last-of-type {
+        width: 25% !important;
+    }
+}
+
+@media (min-width: 550px) and (max-width: 800px) {
+    #AdminPageHeader > div:first-of-type {
+        width: 30%;
+        display: flex;
+        justify-content: end;
+    }
+
+    #AdminPageHeader > div:last-of-type {
+        width: 20%;
+        padding: 3px 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #AdminPageHeader > div:first-of-type img {
+        width: fit-content;
+        height: 100%;
+    }
+
+    #AdminPageHeader > div:last-of-type > div:first-of-type {
+        font-size: .9rem;
+        align-self: center;
+    }
+
+    #AdminPageHeader > div:last-of-type > div:last-of-type a {
+        font-size: 1.1rem;
+    }
+
+    #AdminPageSection > div:first-of-type form > input {
+        width: 75%;
+        font-size: .9rem;
+    }
+
+    #AdminPageSection > div:first-of-type form > select {
+        width: 25%;
+        font-size: .8rem;
+    }
+}
+
+@media (min-width: 800px) and (max-width: 1420px) {
+    #AdminPageHeader > div:first-of-type {
+        width: 170px;
+    }
+
+    #AdminPageHeader > div:last-of-type {
+        width: 150px !important;
+    }
+
+    #AdminPageHeader > div:last-of-type > div:first-of-type {
+        font-size: 1rem;
+    }
+
+    #AdminPageHeader > div:last-of-type > div:last-of-type a {
+        font-size: 1.1rem;
     }
 }
