--- a/client/src/StudentsPage/Responsive.css
+++ b/client/src/StudentsPage/Responsive.css
@@ -3,6 +3,14 @@
         height: 85vh;
     }
 
+    #StudentPage header > div:first-of-type {
+        padding: 0px 15px;
+    }
+
+    #StudentPage header > div:first-of-type > div {
+        width: 140px;
+    }
+
     #StudentPage section::before {
         display: none;
     }
@@ -83,6 +91,10 @@
 }
 
 @media (min-width: 775px) and (max-width: 965px) {
+    #StudentPage header > div:first-of-type > div {
+        width: 140px;
+    }
+
     #StudentPage section > div:first-child > div {
         margin: 5px 0 20px 0;
         font-size: 1.1rem;
