--- a/client/src/AdminPage/AdminPage.css
+++ b/client/src/AdminPage/AdminPage.css
@@ -47,6 +47,10 @@
     opacity: .6;
 }
 
+#DeletingAlert p {
+    margin-bottom: 20px;
+}
+
 .disabelePage {
     pointer-events: none;
     opacity: .8;
@@ -141,24 +145,24 @@
     padding: 5px 7px;
     font-family: 'Cairo regular';
     border: none;
-    border-bottom: 3px solid #6868ffba;
+    border-bottom: 3px solid white;
     background-color: transparent;
-    color: #6868ff;
+    color: rgb(86, 86, 86);
     font-size: 1rem;
     font-weight: 600;
 }
 
 #AdminPageSection > div:first-of-type form > input::placeholder {
-    color: #6868ffd0;
+    color: rgba(86, 86, 86, 0.683);
 }
 
 #AdminPageSection > div:first-of-type form > select {
     padding: 5px 7px;
     font-family: 'Cairo regular';
     border: none;
-    border-bottom: 3px solid #6868ffba;
+    border-bottom: 3px solid white;
     background-color: transparent;
-    color: #6868ff;
+    color: rgb(86, 86, 86);
     font-size: .87rem;
     font-weight: 600;
     cursor: pointer;
@@ -209,7 +213,7 @@
     align-items: center;
 }
 
-#RegisterRequestsFooter button {
+#RegisterRequestsFooter button, #DeletingAlert button {
     margin: 0 15px;
     padding: 5px 20px;
     font-size: .8rem;
